--- a/buyer_dashboard/buyer.css
+++ b/buyer_dashboard/buyer.css
@@ -145,8 +145,18 @@ body {
     height: 50px;
     background-color: white;
     color: black;
-    text-align: center;
     margin-left: 5px;
     margin-top: 5px;
     font-size: 24px;
+    text-align: center;
+}
+
+.menu_options > h5 {
+    margin-top: 10px;
+}
+
+.menu_options:hover {
+    background-color: blue;
+    color: white;
+    transition: 0.5s;
 }
