--- a/create_card/create_card.css
+++ b/create_card/create_card.css
@@ -7,32 +7,36 @@ body {
 #container {
     display: grid;
     grid-template-columns: auto auto;
-    column-gap: 5px;
-    border: 1px solid red;
     width: 1200px;
     height: 800px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 #card_form {
     position: absolute;
     margin-left: 5px;
     margin-top: 50px;
+    height: auto;
 }
 
 #card_form > label {
     font-size: 26px;
     color: black;
     font-family: Lato;
-    text-align: right;
 }
 
-#card_form > input {
+.form_inputs {
     font-family: Lato;
+    height: 25px;
+    width: 300px;
+}
+
+#product_description {
+    width: 525px;
     height: 25px;
 }
 
@@ -42,28 +46,41 @@ body {
     background-color: lime;
     cursor: pointer;
     position: absolute;
-    margin-left: 200px;
+    margin-left: 725px;
+    margin-top: 75px;
 }
 
-#create_card:hover {
+#cancel_create {
     width: 100px;
     height: 50px;
-    opacity: 75%;
-    transition: 0.5s;
+    background-color: red;
+    cursor: pointer;
+    position: absolute;
+    margin-top: 75px;
+    margin-left: 550px;
 }
 
-#product_description {
-    width: 500px;
+#create_card:hover, #cancel_create:hover {
+    opacity: 75%;
 }
 
 #card_preview {
     border: 1px solid black;
-    width: 325px;
-    height: 425px;
+    width: 400px;
+    height: 500px;
     background-color: aqua;
     position: absolute;
     right: 5px;
     margin-top: 35px;
+}
+
+#card_preview > h2 {
+    text-align: center;
+    position: absolute;
+    left: 125px;
+    top: 5px;
+    margin: none;
+    font-family: Lato;
 }
 
 #product_card {
@@ -72,6 +89,7 @@ body {
     margin: 5px;
     background-color: rgb(90, 200, 200);
     position: absolute;
+    margin-top: 25px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);    
@@ -80,7 +98,6 @@ body {
 #product_image_container {
     width: 290px;
     height: 195px;
-    background-color: orange;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
@@ -98,12 +115,12 @@ body {
     font-family: Lato;
 }
 
-#product_image {
+#product_image_preview {
     width: 100%;
     height: 100%;
 }
 
-#product_titles {
+#product_title_preview {
     font-size: 24px;
     margin-top: 15px;
     margin-bottom: 5px;
@@ -125,7 +142,7 @@ body {
     transition: 0.5s;
 }
 
-#product_price {
+#product_price_preview {
     position: absolute;
     left: 5px;
     bottom: -10px;
